Defining some variables and assign it's values
- Search by city name and assign this name to city value
- show values(timezone, temperature, description) after getting city name from the user

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-
+    <input type="text" name="city" id="city" class="city-name">
+    <button class="search">search</button>
     <!-- the div where the location will be presented -->
     <div class="location">
         <h1 class="location-timezone">Timezone</h1>
